# richexif

./: README.md  flake.nix  pyproject.toml
.github/: description  topics
src/richexif/: main.py
